# Tartarus

./: .gitignore  CMakeLists.txt  README.md
tartarus/: log.cc  log.h
tests/: test.cc
